--- a/tests/ci/suite.toml
+++ b/tests/ci/suite.toml
@@ -1,8 +1,14 @@
 name = "ci-test"
-description = "基础功能冒烟用例：musl libc、基础系统调用等"
-build_script = "scripts/build_stub.sh"
+description = "基础功能冒烟用例：StarryOS 启动 + 基础库验证"
+build_script = "scripts/ci_build_starry.sh"
 arch = "aarch64"
 default_timeout_secs = 300
+
+[[cases]]
+name = "starry-boot"
+description = "借鉴 StarryOS scripts/ci-test.py，验证 BusyBox Shell 启动"
+path = "tests/ci/cases/starry_boot.sh"
+args = []
 
 [[cases]]
 name = "boot-smoke"
