--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -40,5 +40,8 @@ jobs:
           version: 10.1.0
           arch_list: ${{ env.ARCH }}
 
+      - name: Install filesystem tools
+        run: sudo apt-get update && sudo apt-get install -y e2fsprogs
+
       - name: 执行 ci-test
         run: make ci-test run
