--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -21,9 +21,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Rust nightly
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly-2024-11-01
           components: rustfmt
 
       - uses: Swatinem/rust-cache@v2
